Fixed contrast in QComboBox style
Text looked very dim in Ubuntu. The QDockWidget buttons are still a
problem.

--- a/styles/flipp.css
+++ b/styles/flipp.css
@@ -10,7 +10,7 @@ border: 2px solid rgb(250,20,0);
 QComboBox {
 border: 2px solid rgb(100,100,100);
 border-radius: 4px;
-
+padding: 2px;
 color: rgb(200,200,200);
 selection-background-color: rgb(0,0,0);
 selection-color: rgb(250,250,250);
@@ -32,6 +32,10 @@ QComboBox:down-arrow {
  image: url(:/images/triangle_icon.png);
  }
 
+ QComboBox:!editable {
+ color: rgb(250,250,250);
+ }
+ 
 QComboBox QAbstractItemView {
 color: rgb(200,200,200);
 border: 1px solid darkgray;
@@ -42,39 +46,33 @@ border-radius: 2px;
 
 QComboBox QAbstractItemView::item {
 min-height: 24px;
-color: rgb(250,250,250);
+color: rgb(200,200,200);
 }
 
- QDockWidget {
-     border: 1px solid lightgray;
-	 color: rgb(100,100,100);
-/*     titlebar-close-icon: url(close.png);
-     titlebar-normal-icon: url(undock.png);*/
+QDockWidget {
+	 color: black;
  }
 
  QDockWidget::title {
      text-align: left; /* align the text to the left */
      background: rgb(100,100,100);
      padding-left: 5px;
-	 color: rgb(100,100,100);
  }
 
- /*
+ 
  QDockWidget::close-button, QDockWidget::float-button {
-     border: 1px solid transparent;
-     background: darkgray;
-     padding: 0px;
+ color: black;
  }
-
- QDockWidget::close-button:hover, QDockWidget::float-button:hover {
-     background: gray;
- }
-
- QDockWidget::close-button:pressed, QDockWidget::float-button:pressed {
+ 
+  QDockWidget::close-button:hover, QDockWidget::float-button:hover {
+	background-color: white;
+	color: black;
+  }
+   QDockWidget::close-button:pressed, QDockWidget::float-button:pressed {
      padding: 1px -1px -1px 1px;
  }
- */
- 
+
+  
 QTableView QTableCornerButton::section {
     background: black;
     /*border: 2px solid rgb(100,100,100);*/
@@ -95,7 +93,7 @@ color: rgb(250,250,250);
 
 QLineEdit {
 background-color:rgb(0,0,0);
-color: rgb(200,200,200);
+color: rgb(250,250,250);
 selection-color: rgb(0,0,0);
 selection-background-color: rgb(250,250,250);
 border-style: solid;
@@ -120,43 +118,40 @@ QListView::item:hover {
 background-color: rgb(50,50,50);
 }
 
+
  QMenu {
-     background-color: #ABABAB; /* sets background of the menu */
+     background-color: rgb(200,200,200); 
      border: 1px solid black;
+	 color: black;
  }
+ 
+ QMenu::item:selected { 
+     background-color: rgb(100,100,100);
+	color: white;
+	 }
 
- QMenu::item {
-     /* sets background of menu item. set this to something non-transparent
-         if you want menu color and menu item color to be different */
-     background-color: transparent;
- }
-
- QMenu::item:selected { /* when user selects item using mouse or keyboard */
-     background-color: transparent;
- }
 
  QMenuBar {
-     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-                                       stop:0 lightgray, stop:1 darkgray);
+background-color: rgb(200,200,200);
+color: black;
  }
  
   QMenuBar::item {
      spacing: 5px; /* spacing between menu bar items */
      padding: 5px 10px;
      background: transparent;
-     border-radius: 4px;
-	 /*min-width: 40px;*/
-	 /*selection-border-color: rgb(100,100,100);*/
  }
-
- QMenuBar::item:selected { /* when selected using mouse or keyboard */
-     background: #a8a8a8;
+ 
+ QMenuBar::item:selected { 
+	 background-color: rgb(100,100,100);
+	 color: white;
  }
  
  QMenuBar::item:pressed {
-     background: #888888;
+     background-color: rgb(100,100,100);
  }
 
+ 
 QPlainTextEdit::focus {
 background-color: rgb(20,20,20);
 border-color: rgb(100,100,100);
@@ -215,10 +210,7 @@ border-bottom-left-radius: 4px;
 }
 
 QPushButton#hexButton {
-
-/*color: rgb(250,250,250);*/
 border-left-width: 2px;
-/*border-style: solid;*/
 border-color: rgb(100,100,100);
 
 border-top-left-radius: 0px;
@@ -236,7 +228,6 @@ border-bottom-color: rgb(100,100,100);
 
 QPushButton#asciiButton::checked, QPushButton#hexButton::checked {
 background-color: rgb(100,100,100);
-/*color: rgb(0,0,0);*/
 }
 
 QSpinBox {
